# cm-wizard

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  cm_wizard.py  pyproject.toml  requirements.txt
cm_wizard/: __main__.py  main.py
cm_wizard/controls/: cardmarket_icon.py  conditional.py  form.py  validated_text_field.py
cm_wizard/i18n/: de.json  en.json  es.json  fr.json  it.json
cm_wizard/screens/: abstract_screen.py
cm_wizard/screens/login/: login_screen.py
cm_wizard/screens/login/controls/: login_form.py
cm_wizard/screens/wants_list/: wants_list_screen.py
cm_wizard/screens/wants_list/controls/: wants_list_table.py
cm_wizard/screens/wants_lists/: wants_lists_screen.py
cm_wizard/screens/wants_lists/controls/: wants_lists_grid.py  wants_lists_grid_item.py
cm_wizard/screens/wizard/: wizard_screen.py
cm_wizard/screens/wizard/controls/: wizard.py  wizard_loading.py  wizard_loading_view.py  (+1 more)
cm_wizard/services/: browser.py  currency.py  locale.py  shopping_wizard_service.py  wizard_orchestrator_service.py
cm_wizard/services/cardmarket/: card_query.py  cardmarket_game.py  cardmarket_service.py  log_retry.py
manual_tests/: test_too_many_requests.py
responses/: en_Yugioh_Cards_A-Feather-of-the-Phoenix.html  en_Yugioh_Users_wkleebe1_Offers_Singles_idWantslist_15628908.html  en_Yugioh_Wants.html  en_Yugioh_Wants_15628908.html
tests/services/: test_cardmarket_service.py  test_currency.py  test_locale.py  test_shopping_wizard_service.py  test_wizard_orchestrator_service.py
tests/services/cardmarket/: test_cardmarket_service.py
(+17 files in other folders)
