[tool.poetry]
name = "cm-wizard"
version = "0.1.0"
description = "A wizard that helps you find the cheapest prices for cards on you wants lists."
authors = ["Micha Sengotta <micha.sengotta@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "cm_wizard"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.7.0"
requests = "^2.29.0"
browser-cookie3 = "^0.18.0"
beautifulsoup4 = "^4.12.2"
rapidfuzz = "^3.0.0"
numpy = "^1.24.3"
ratelimit = "^2.2.1"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
types-requests = "^2.30.0.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
